...
          }}
        />
        <Tabs.Screen
          name="nutrition"
          options={{
            title: TAB_ICONS.nutrition.title,
            tabBarAccessibilityLabel: 'tab-nutrition',
            tabBarButtonTestID: 'tab-nutrition',
            tabBarIcon: ({ color, focused }) => (
              <TabIconWithBadge icon={TAB_ICONS.nutrition} color={color} focused={focused} />
            ),
          }}
        />
...
